build/log/idf_py_stderr_output_24097
/home/ufi/programming/The-One-Ring/main/TheOneRing.c: In function 'app_main':
/home/ufi/programming/The-One-Ring/main/TheOneRing.c:7:19: error: expected ',' or ';' before numeric constant
    7 | #define LED_COUNT 71
      |                   ^~
/home/ufi/programming/The-One-Ring/main/TheOneRing.c:56:17: note: in expansion of macro 'LED_COUNT'
   56 |   for(int i = 0 LED_COUNT/2 +1; i < LED_COUNT; i++){
      |                 ^~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/TheOneRing.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5719: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
